# cmake_study

./: README.txt
Step1/: CMakeLists.txt  tutorial.cxx
Step1/Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Step10/: CMakeLists.txt  tutorial.cxx
Step10/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
Step11/: CMakeLists.txt
Step11/MathFunctions/: CMakeLists.txt
Step12/: CMakeLists.txt  MultiCPackConfig.cmake
Step12/MathFunctions/: CMakeLists.txt
Step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step2/MathFunctions/: mysqrt.cxx
Step3/: CMakeLists.txt
Step3/MathFunctions/: CMakeLists.txt
Step4/: CMakeLists.txt
Step5/: CMakeLists.txt
Step6/: CMakeLists.txt  CTestConfig.cmake
Step6/Testing/: TAG
Step6/Testing/20230117-0913/: Test.xml
Step6/Testing/Temporary/: LastCoverage_20230117-0913.log.tmp
Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step8/MathFunctions/: CMakeLists.txt  mysqrt.cxx
importing-exporting/: main
importing-exporting/Importing/: CMakeLists.txt
importing-exporting/MyExe/: CMakeLists.txt  main.cxx
